force-app/main/default/objects/Sales_Offer_Auth__mdt/Sales_Offer_Auth__mdt.object-meta.xml
<CustomObject>
    <label>Sales Offer Auth</label>
    <pluralLabel>Sales Offer Auth</pluralLabel>
</CustomObject>