force-app/main/default/objects/Sales_Offer_Auth__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Connected App consumer key used for the password OAuth flow.</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>