force-app/main/default/objects/Sales_Offer_Auth__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Connected App consumer secret used for the password OAuth flow.</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>