force-app/main/default/objects/Sales_Offer_Auth__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Integration user password (+ security token if required) for the password OAuth flow.</description>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>