force-app/main/default/objects/Sales_Offer_Auth__mdt/fields/Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Url__c</fullName>
    <description>OAuth token endpoint, e.g. https://your-domain.my.salesforce.com/services/oauth2/token. The API base host is derived from this.</description>
    <label>Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>