force-app/main/default/objects/Sales_Offer_Auth__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Integration user username for the password OAuth flow (renders the offer with full access).</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>